@@ -1,3 +1,8 @@
+2007-05-02 Igor Zelmanovich <igorz@mainsoft.com>
+
+	* SqlDataSourceView.cs:
+	make CancelSelectOnNullParameter property works.
+
 2007-05-01  Marek Habersack  <mhabersack@novell.com>
 
 	* BaseValidator.cs: do not use User-Agent directly, we must take
